<resources>
    <string name="app_name">ProjetoFecap</string>
    <string name="title_activity_maps">MapsActivity</string>

    <!--  Text  -->
    <string name="text_entrar">Entrar</string>
    <string name="text_cadastro">Crie uma conta clicando aqui</string>
    <string name="title_cadastro">Cadastre-se</string>
    <string name="text_menu">Menu</string>

    <!--  Hints  -->
    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_nome">Nome</string>


</resources>