<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="br.fecap.pi.saferide.FormCadastro">


    <TextView
        android:id="@+id/title_cadastrese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_cadastro"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/containerComponets"
        style="@style/ContainerComponents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_cadastrese" />

    <EditText
        android:id="@+id/edit_nome"
        style="@style/Edit_Text"
        android:textColor="@color/black"
        android:hint="@string/hint_nome"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/containerComponets"
        app:layout_constraintStart_toStartOf="@+id/containerComponets"
        app:layout_constraintTop_toTopOf="@+id/containerComponets" />

    <EditText
        android:id="@+id/edit_email"
        style="@style/Edit_Text"
        android:textColor="@color/black"
        android:hint="@string/hint_email"
        android:drawableRight="@drawable/ic_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/containerComponets"
        app:layout_constraintStart_toStartOf="@+id/containerComponets"
        app:layout_constraintTop_toBottomOf="@+id/edit_nome" />

    <EditText
        android:id="@+id/edit_senha"
        style="@style/Edit_Text"
        android:textColor="@color/black"
        android:hint="@string/hint_senha"
        android:drawableRight="@drawable/ic_eye"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/containerComponets"
        app:layout_constraintStart_toStartOf="@+id/containerComponets"
        app:layout_constraintTop_toBottomOf="@+id/edit_email" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/Button"
        android:text="Cadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerComponets"
        android:layout_marginTop="30dp"
        android:background="@drawable/button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>