<?xml version="1.0" encoding="utf-8"?>


<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context="br.fecap.pi.saferide.FormLogin">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"

            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <View
            android:id="@+id/containerComponets"
            style="@style/ContainerComponents"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/edit_email"
            style="@style/Edit_Text"
            android:textColor="@color/black"
            android:hint="@string/hint_email"
            android:drawableRight="@drawable/ic_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/containerComponets"
            app:layout_constraintStart_toStartOf="@+id/containerComponets"
            app:layout_constraintTop_toTopOf="@+id/containerComponets" />

        <EditText
            android:id="@+id/edit_senha"
            style="@style/Edit_Text"
            android:textColor="@color/black"
            android:hint="@string/hint_senha"
            android:inputType="textPassword"
            android:drawableRight="@drawable/ic_eye"
            app:layout_constraintEnd_toEndOf="@+id/containerComponets"
            app:layout_constraintStart_toStartOf="@+id/containerComponets"
            app:layout_constraintTop_toBottomOf="@+id/edit_email"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_entrar"
            style="@style/Button"
            android:text="@string/text_entrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_senha"
            android:background="@drawable/button"/>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/containerComponets"
            android:layout_marginTop="20dp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/text_tela_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_cadastro"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressbar" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_teste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            style="@style/Button"
            android:text="TESTE COM O SERVIDOR"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.944" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>